# wanzhuanqt

./: conanfile.py  readme.md
src/: CMakeLists.txt
src/wanzhuanqt/: clock.cpp  clock.h  wanzhuanqt.cpp
